# WIFI-CSI-HAR

./: .gitignore  README.md  pyproject.toml  translate_readme.html
data/calibration/: L0382_ESP_1_bg_params.csv  L0382_ESP_2_bg_params.csv  L0382_ESP_3_bg_params.csv  L0382_ESP_4_bg_params.csv  L0382_ESP_5_bg_params.csv  L0382_ESP_6_bg_params.csv  L0382_ESP_7_bg_params.csv  L0382_ESP_8_bg_params.csv
data/processed/: L0382_ESP_1_20250523_092436.csv  L0382_ESP_1_20250523_092438.csv  L0382_ESP_1_20250523_092439.csv  L0382_ESP_1_20250523_092440.csv  L0382_ESP_1_20250523_092442.csv  L0382_ESP_1_20250523_092443.csv  L0382_ESP_1_20250523_092444.csv  L0382_ESP_1_20250523_092445.csv  L0382_ESP_1_20250523_092447.csv  L0382_ESP_1_20250523_092448.csv  L0382_ESP_2_20250523_092436.csv  L0382_ESP_2_20250523_092438.csv  L0382_ESP_2_20250523_092439.csv  L0382_ESP_2_20250523_092440.csv  L0382_ESP_2_20250523_092442.csv  L0382_ESP_2_20250523_092443.csv  L0382_ESP_2_20250523_092444.csv  L0382_ESP_2_20250523_092445.csv  L0382_ESP_2_20250523_092447.csv  L0382_ESP_2_20250523_092448.csv  L0382_ESP_3_20250523_092437.csv  L0382_ESP_3_20250523_092438.csv  L0382_ESP_3_20250523_092439.csv  L0382_ESP_3_20250523_092441.csv  L0382_ESP_3_20250523_092442.csv  L0382_ESP_3_20250523_092443.csv  L0382_ESP_3_20250523_092445.csv  (+41 more)
nbs/: 01_plotting_raw_csi.ipynb  03_sc_analysis.ipynb  05_PCA.ipynb
scripts/: CSI_Plot_Main.py  process.py
src/: CSI_To_CSV.py  CSV_To_Plot.py  Processed_Raw_CSI_Visualizer.py  Raw_CSI_To_CSV.py  merge_csv.py  ours.py  ours2.py  preprocessing.py  utils.py
(+152 files in other folders)
